1607
Which compiler version did you use? I tried with 2.7.3.final and the current trunk (Mac OS X), and both don't crash.

{code}
clamppc26:other luc$$ scalac Sets.scala 
Sets.scala:26: error: value /: is not a member of Set[X]
  def powerset[X, Set[X]](xs: Set[X]) = (Set(Set.empty[X]) /: xs) ((xss, x) => xss ++ xss.map(_ + x))
                                                           ^
one error found
lamppc26:other luc$$
{code}
